tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_44.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := ((((1 MOD 2) - 0) + ((z MOD x) - 1)) - (0 - 200));
               y := ((y + 2) MOD (z + (+ 200)));
               r := ((y = (z + 0)) OR (~ ((y - 1) < (x DIV y))));
  (* error *)  z := 1223;
               r := ((200 MOD 0) = y);
               x := (1 MOD (2 + (z * (x DIV x))));
               y := (+ 200);
               q := ((- ((2 * 200) * (200 + 0))) >= y);
               r := (~ (1223 < (x + (+ 1))));
               x := 2
END Test14.